1.2.2 fix canvas blurry text

--- a/theme.css
+++ b/theme.css
@@ -1575,6 +1575,15 @@ ul > li.task-list-item.is-checked *,
 
 
 
+/* canvas text blurry fix */
+.is-focused .canvas-node-content.markdown-embed > .markdown-embed-content > .markdown-preview-view {
+  transform: unset;
+}
+
+
+
+
+
 /*
 --------------------------- --------------------------- 
 --------------------------- --------------------------- 
